# rust-wthisper

./: .gitignore  Cargo.toml  README.md  index.html
frontend/: Cargo.toml
frontend/src/: lib.rs
pkg/: rust_wthisper_frontend.d.ts  rust_wthisper_frontend.js  rust_wthisper_frontend_bg.wasm  rust_wthisper_frontend_bg.wasm.d.ts
src/: main.rs
